--- a/duchebaodian/build.gradle
+++ b/duchebaodian/build.gradle
@@ -20,7 +20,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
+    compile files('libs/afinal_0.5.1_bin.jar')
+    compile files('libs/android-async-http-1.4.3.jar')
+    compile files('libs/httpcore-4.4.4.jar')
 }
